@startuml ClinicManagementSystem

hide circle
skinparam linetype ortho
skinparam roundcorner 5
skinparam class {
    BackgroundColor White
    ArrowColor #2C3E50
    BorderColor #2C3E50
    HeaderBackgroundColor #ECF0F1
}

entity "account" as account {
  * id : UUID <<PK>>
  --
  * email : VARCHAR(256) <<UQ>>
  * password_hash : VARCHAR(256)
  phone_number : VARCHAR(20) <<UQ>>
  * firstname : VARCHAR(50)
  * lastname : VARCHAR(50)
  * birthday : DATE
  * role : INT
  photo_id : UUID <<FK>>
  * is_active : BOOL
}

entity "patient" as patient {
  * id : UUID <<PK>>
  --
  * account_id : UUID <<FK>> <<UQ>>
}

entity "doctor" as doctor {
  * id : UUID <<PK>>
  --
  * account_id : UUID <<FK>> <<UQ>>
  * specialization_id : UUID <<FK>>
  * office_id : UUID <<FK>>
  * career_start_date : DATE
  * gap_in_months : SMALLINT
  degree : VARCHAR(30)
}

entity "administrator" as administrator {
  * id : UUID <<PK>>
  --
  * account_id : UUID <<FK>> <<UQ>>
  * office_id : UUID <<FK>>
  * career_start_date : DATE
  * gap_in_months : SMALLINT
}

entity "office" as office {
  * id : UUID <<PK>>
  --
  * address : VARCHAR(256)
  phone_number : VARCHAR(20) <<UQ>>
  photo_id : UUID <<FK>>
}

entity "photo" as photo {
  * id : UUID <<PK>>
  --
  * url : VARCHAR(500)
}

entity "specialization" as specialization {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(50) <<UQ>>
}

entity "service_category" as service_category {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(100) <<UQ>>
  * duration : INTERVAL
}

entity "service" as service {
  * id : UUID <<PK>>
  --
  * specialization_id : UUID <<FK>>
  * service_category_id : UUID <<FK>>
  * name : VARCHAR(100) <<UQ>>
  * price : NUMERIC(18, 2)
  * is_active : BOOL
}

entity "schedule" as schedule {
  * id : UUID <<PK>>
  --
  * doctor_id : UUID <<FK>>
  * date : DATE
  * start_time : TIME
  * end_time : TIME
}

entity "appointment" as appointment {
  * id : UUID <<PK>>
  --
  * doctor_id : UUID <<FK>>
  * patient_id : UUID <<FK>>
  * service_id : UUID <<FK>>
  * date : DATE
  * time : TIME
  * is_approved : BOOL
}

entity "result" as result {
  * id : UUID <<PK>>
  --
  * appointment_id : UUID <<FK>> <<UQ>>
  complaints : TEXT
  diagnosis : TEXT
  recommendations : TEXT
}

entity "audit_log" as audit_log {
  * id : UUID <<PK>>
  --
  account_id : UUID <<FK>>
  * action : VARCHAR(100)
  entity_name : VARCHAR(100)
  entity_id : UUID
  * timestamp : TIMESTAMP
}

account ||--o| patient : "1:1"
account ||--o| doctor : "1:1"
account ||--o| administrator : "1:1"

photo |o--o| account : "1:1 (nullable)"
photo |o--o| office : "1:1 (nullable)"

office ||--o{ doctor : "1:M"
office ||--o{ administrator : "1:M"

specialization ||--o{ doctor : "1:M"
specialization ||--o{ service : "1:M"
service_category ||--o{ service : "1:M"

doctor ||--o{ schedule : "1:M"

doctor ||--o{ appointment : "1:M"
patient ||--o{ appointment : "1:M"
service ||--o{ appointment : "1:M"

appointment ||--o| result : "1:1"

account |o--o{ audit_log : "1:M (nullable account_id)"

@enduml